--- a/doxygen.config
+++ b/doxygen.config
@@ -229,6 +229,7 @@ TAB_SIZE               = 4
 # newlines.
 
 ALIASES                =
+ALIASES                += "license=@par License:\n"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding "class=itcl::class"
