--- a/linux/Makefile
+++ b/linux/Makefile
@@ -11,7 +11,34 @@ CFLAGS  = -I ../ -I ./ -DLINUX
 LDFLAGS =
 
 ifeq ($(build),debug)
-	CFLAGS += -c -g -Wall
+	CFLAGS += -c -g2 -O0 \
+		-Wall -Weffc++ \
+		-Wextra -Wcast-align \
+		-Wchar-subscripts  -Wcomment -Wconversion \
+		-Wdisabled-optimization \
+		-Wfloat-equal  -Wformat  -Wformat=2 \
+		-Wformat-nonliteral -Wformat-security  \
+		-Wformat-y2k \
+		-Wimplicit  -Wimport  -Winit-self  -Winline \
+		-Winvalid-pch   \
+		-Wunsafe-loop-optimizations  -Wlong-long -Wmissing-braces \
+		-Wmissing-field-initializers -Wmissing-format-attribute   \
+		-Wmissing-include-dirs -Wmissing-noreturn \
+		-Wpacked  -Wparentheses  -Wpointer-arith \
+		-Wredundant-decls -Wreturn-type \
+		-Wsequence-point  -Wshadow -Wsign-compare  -Wstack-protector \
+		-Wstrict-aliasing -Wstrict-aliasing=2 -Wswitch  -Wswitch-default \
+		-Wswitch-enum -Wtrigraphs  -Wuninitialized \
+		-Wunknown-pragmas  -Wunreachable-code -Wunused \
+		-Wunused-function  -Wunused-label  \
+		-Wunused-value  -Wunused-variable \
+		-Wvolatile-register-var  -Wwrite-strings
+	
+	# Disable some warnings
+	CFLAGS += -Wno-variadic-macros -Wno-unused-parameter -Wno-vla
+	
+	# Uncomment this to get pedantic warnings:
+	#CFLAGS += -pedantic -Wvariadic-macros -Wunused-parameter -Waggregate-return -Wcast-qual -Wpadded
 else
 	CFLAGS += -c -O3 -w
 	LDFLAGS += -s
