Added dome documentation and experimental functions

--- a/doxygen.config
+++ b/doxygen.config
@@ -230,6 +230,8 @@ TAB_SIZE               = 4
 
 ALIASES                =
 ALIASES                += "license=@par License:\n"
+ALIASES                += experimental="\xrefitem experimental \"This feature is marked as experimental\" \"Experimental List\"\n"
+ALIASES                += experimental{1}="\xrefitem experimental \"Experimental\" \"Experimental List\" \1\n"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding "class=itcl::class"
@@ -410,7 +412,7 @@ LOOKUP_CACHE_SIZE      = 0
 # normally produced when WARNINGS is set to YES.
 # The default value is: NO.
 
-EXTRACT_ALL            = YES
+EXTRACT_ALL            = NO
 
 # If the EXTRACT_PRIVATE tag is set to YES all private members of a class will
 # be included in the documentation.
@@ -1974,7 +1976,7 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             =
+PREDEFINED             = BLYNK_EXPERIMENTAL
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
