--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/CC3000
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/ENC28J60
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/ESP8266_Standalone PLATFORMIO_CI_BOARDS_ARGS="--board=esp01"
+    - PLATFORMIO_CI_SRC=examples/BoardsAndShields/RN_XV_WiFly
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/TinyDuino_WiFi
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/WildFire PLATFORMIO_CI_BOARDS_ARGS="--board=wildfirev3"
     - PLATFORMIO_CI_SRC=examples/GettingStarted/BlynkBlink
@@ -41,8 +42,9 @@ install:
     # http://platformio.org/#!/lib/show/418/WildFireCore
     # http://platformio.org/#!/lib/show/419/SimpleTimer
     # http://platformio.org/#!/lib/show/420/WildFire-CC3000
+    # http://platformio.org/#!/lib/show/65/WiFlyHQ
 
-    - platformio lib install 17 28 91 418 419 420
+    - platformio lib install 17 28 91 418 419 420 65
 
 script:
     - if [[ $PLATFORMIO_CI_BOARDS_ARGS ]]; then bash -c 'platformio ci --lib="." $PLATFORMIO_CI_BOARDS_ARGS'; else bash -c 'platformio ci --lib="." --board=uno --board=yun --board=megaatmega2560'; fi
