--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,10 @@ env:
     - PLATFORMIO_CI_SRC=examples/Widgets/Twitter
     - PLATFORMIO_CI_SRC=examples/Widgets/Email
     - PLATFORMIO_CI_SRC=examples/Widgets/PushNotification
+    - LINUX_SRC=linux
 
 install:
     - python -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/master/scripts/get-platformio.py)"
-    - rm -rf ./linux
     #
     # Libraries from PlatformIO Library Registry:
     #
@@ -48,5 +48,4 @@ install:
 
     - platformio lib install 17 28 91 418 419 420 65
 
-script:
-    - if [[ $PLATFORMIO_CI_BOARDS_ARGS ]]; then bash -c 'platformio ci --lib="." $PLATFORMIO_CI_BOARDS_ARGS'; else bash -c 'platformio ci --lib="." --board=uno --board=leonardo --board=yun --board=megaatmega2560'; fi
+script: make travis-build
