Joystick examples added

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ env:
     - PLATFORMIO_CI_SRC=examples/More/Stroboscope
     - PLATFORMIO_CI_SRC=examples/Widgets/Bridge
     - PLATFORMIO_CI_SRC=examples/Widgets/Terminal
+    - PLATFORMIO_CI_SRC=examples/Widgets/OneAxisJoystick
+    - PLATFORMIO_CI_SRC=examples/Widgets/TwoAxisJoystick
     - PLATFORMIO_CI_SRC=examples/Widgets/LCD
     - PLATFORMIO_CI_SRC=examples/Widgets/LED
     - PLATFORMIO_CI_SRC=examples/Widgets/SDcard
