--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=Blynk
-version=0.2.5-beta
+version=0.3.0
 author=Volodymyr Shymanskyy
 maintainer=Volodymyr Shymanskyy <info@adafruit.com>
 sentence=Build a smartphone app for your hardware project in minutes.
