--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=Blynk
 version=0.3.1
 author=Volodymyr Shymanskyy
-maintainer=Volodymyr Shymanskyy <info@adafruit.com>
+maintainer=Volodymyr Shymanskyy <volodymyr@blynk.cc>
 sentence=Build a smartphone app for your hardware project in minutes.
 paragraph=Build a smartphone app for your hardware project in minutes. See more at: http://blynk.cc
 category=Communication
