--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=Blynk
-version=0.3.3-beta
+version=0.3.3
 author=Volodymyr Shymanskyy
 maintainer=Volodymyr Shymanskyy <volodymyr@blynk.cc>
 sentence=Build a smartphone app for your hardware project in minutes.
