--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=Blynk
 version=0.3.3
 author=Volodymyr Shymanskyy
 maintainer=Volodymyr Shymanskyy <volodymyr@blynk.cc>
-sentence=Build a smartphone app for your hardware project in minutes.
-paragraph=Build a smartphone app for your hardware project in minutes. See more at: http://blynk.cc
+sentence=Build a smartphone app for your project in minutes. 
+paragraph=Works with Arduino, ESP8266, Raspberry Pi, Intel Edison/Galileo, LinkIt ONE, Particle Core/Photon, Banana Pro, LeMaker Guitar, Energia, MBED, LightBlue Bean, ...
 category=Communication
 url=http://blynk.cc
 architectures=*
