--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=Blynk
-version=0.3.3
+version=0.3.5-beta
 author=Volodymyr Shymanskyy
 maintainer=Volodymyr Shymanskyy <volodymyr@blynk.cc>
-sentence=Build a smartphone app for your project in minutes. 
+sentence=Build a smartphone app for your project in minutes.
 paragraph=Works with Arduino, ESP8266, Raspberry Pi, Intel Edison/Galileo, LinkIt ONE, Particle Core/Photon, Banana Pro, LeMaker Guitar, Energia, MBED, LightBlue Bean, ...
 category=Communication
 url=http://blynk.cc
