--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=Blynk
 version=0.3.5-beta
 author=Volodymyr Shymanskyy
 maintainer=Volodymyr Shymanskyy <volodymyr@blynk.cc>
-sentence=Build a smartphone app for your project in minutes.
-paragraph=Works with Arduino, ESP8266, Raspberry Pi, Intel Edison/Galileo, LinkIt ONE, Particle Core/Photon, Banana Pro, LeMaker Guitar, Energia, MBED, LightBlue Bean, ...
+sentence=Build a smartphone app for your project in minutes!
+paragraph=Blynk allows creating IoT solutions easily and works with Arduino, ESP8266, Raspberry Pi, Intel Edison/Galileo, LinkIt ONE, Particle Core/Photon, Energia, MBED, LightBlue Bean, ...
 category=Communication
 url=http://blynk.cc
 architectures=*
