--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 env:
     - LINUX_SRC=linux
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Arduino_Ethernet
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Arduino_Ethernet2
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Arduino_Ethernet_Manual
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Arduino_MKR1000
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Arduino_Serial_USB
@@ -14,19 +15,32 @@ env:
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Arduino_Yun PLATFORMIO_CI_BOARDS_ARGS="--board=yun"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Arduino_Zero_M0_Serial PLATFORMIO_CI_BOARDS_ARGS="--board=zero"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/CC3000
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Digistump_Oak
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/ENC28J60 PLATFORMIO_CI_BOARDS_ARGS="--board=nanoatmega328"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/ESP8266_Standalone PLATFORMIO_CI_BOARDS_ARGS="--board=esp01"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/ESP8266_Standalone_SSL PLATFORMIO_CI_BOARDS_ARGS="--board=nodemcuv2"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/ESP8266_Standalone_SmartConfig PLATFORMIO_CI_BOARDS_ARGS="--board=nodemcuv2"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Energia_WiFi PLATFORMIO_CI_BOARDS_ARGS="--board=lptm4c1294ncpdt"
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Intel_Edison_WiFi
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Intel_Galileo
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/LinkItONE
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/RN_XV_WiFly PLATFORMIO_CI_BOARDS_ARGS="--board=leonardo"
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/RedBearLab_CC3200
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/RedBearLab_WiFi_Mini
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/RedBear_Duo_WiFi
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/Seeed_EthernetV2_0
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields/TI_CC3200_LaunchXL
+    - PLATFORMIO_CI_SRC=examples/BoardsAndShields/TI_MSP430F5529_CC3100 PLATFORMIO_CI_BOARDS_ARGS="--board=lpmsp430f5529"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/TI_Stellaris_LaunchPad PLATFORMIO_CI_BOARDS_ARGS="--board=lplm4f120h5qr"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/TI_TivaC_Connected PLATFORMIO_CI_BOARDS_ARGS="--board=lptm4c1294ncpdt"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/TheAirBoard_BLE_Link
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/TinyDuino_WiFi PLATFORMIO_CI_BOARDS_ARGS="--board=tinyduino"
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/User_Defined_Connection
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields/WildFire_V3
+    - PLATFORMIO_CI_SRC=examples/BoardsAndShields/chipKIT_Uno32
     - PLATFORMIO_CI_SRC=examples/BoardsAndShields_Bluetooth/Arduino_101_BLE PLATFORMIO_CI_BOARDS_ARGS="--board=genuino101"
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields_Bluetooth/RedBear_Duo_BLE
+    # - PLATFORMIO_CI_SRC=examples/BoardsAndShields_Bluetooth/Simblee_BLE
     - PLATFORMIO_CI_SRC=examples/GettingStarted/BlynkBlink
     - PLATFORMIO_CI_SRC=examples/GettingStarted/GetData
     - PLATFORMIO_CI_SRC=examples/GettingStarted/PushData
@@ -74,7 +88,8 @@ install:
     # http://platformio.org/lib/show/44/Time
     # http://platformio.org/lib/show/19/Adafruit-DHT
     # http://platformio.org/lib/show/299/WiFi101
+    # http://platformio.org/lib/show/426/nRF8001
 
-    - platformio lib install 17 28 91 418 419 420 65 44 19 299
+    - platformio lib install 17 28 91 418 419 420 65 44 19 299 426
 
 script: make travis-build
