--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Blynk allows creating IoT solutions easily and works with Arduino, ESP
 category=Communication
 url=http://blynk.cc
 architectures=*
+includes=BlynkWrongInclude.h
