--- a/.travis.yml
+++ b/.travis.yml
@@ -63,11 +63,15 @@ env:
     - PLATFORMIO_CI_SRC=examples/More/FormatString
     - PLATFORMIO_CI_SRC=examples/More/NeoPixel
     - PLATFORMIO_CI_SRC=examples/More/PrintAllVirtual
+    - PLATFORMIO_CI_SRC=examples/More/ServerAsDataStorage/ServerAsDataStorage_MultiValue
+    - PLATFORMIO_CI_SRC=examples/More/ServerAsDataStorage/ServerAsDataStorage_SingleValue
+    - PLATFORMIO_CI_SRC=examples/More/SetProperty
     - PLATFORMIO_CI_SRC=examples/More/Stroboscope
     - PLATFORMIO_CI_SRC=examples/More/Sync
     - PLATFORMIO_CI_SRC=examples/More/SyncPhysicalButton
     - PLATFORMIO_CI_SRC=examples/Widgets/Bridge
     - PLATFORMIO_CI_SRC=examples/Widgets/Email
+    - PLATFORMIO_CI_SRC=examples/Widgets/Eventor
     - PLATFORMIO_CI_SRC=examples/Widgets/JoystickTwoAxis
     - PLATFORMIO_CI_SRC=examples/Widgets/LCD/LCD_AdvancedMode
     - PLATFORMIO_CI_SRC=examples/Widgets/LED/LED_StatusOfButton
